// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays toolbar on focus 1`] = `
Array [
  <div
    className="MarkdownTextarea is-focused"
>
    <div
        className="MarkdownTextarea-toolbar"
    >
        <button
            className="MarkdownTextarea-action is-active"
            onClick={[Function]}
        >
            Write
        </button>
        <button
            className="MarkdownTextarea-action "
            onClick={[Function]}
        >
            Preview
        </button>
    </div>
    <TextareaAutosize
        className="MarkdownTextarea-write"
        inputRef={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onHeightChange={[Function]}
        style={
            Object {
                "display": "block",
              }
        }
        useCacheForDOMMeasurements={false}
        value=""
    />
</div>,
]
`;

exports[`renders correctly with only required props 1`] = `
Array [
  <div
    className="MarkdownTextarea "
>
    <TextareaAutosize
        className="MarkdownTextarea-write"
        inputRef={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onHeightChange={[Function]}
        style={
            Object {
                "display": "block",
              }
        }
        useCacheForDOMMeasurements={false}
        value=""
    />
</div>,
]
`;

exports[`supports custom actions 1`] = `
Array [
  <div
    className="MarkdownTextarea "
>
    <div
        className="MarkdownTextarea-toolbar"
    >
        <button
            className="MarkdownTextarea-action is-active"
            onClick={[Function]}
        >
            Write
        </button>
        <button
            className="MarkdownTextarea-action "
            onClick={[Function]}
        >
            Preview
        </button>
        <div
            className="MarkdownTextarea-delimiter"
        />
        <button
            aria-label="Add bold text"
            className="MarkdownTextarea-action "
            onClick={[Function]}
        >
            B
        </button>
        <button
            aria-label="Add italic text"
            className="MarkdownTextarea-action "
            onClick={[Function]}
        >
            I
        </button>
        <button
            aria-label="Insert a quote"
            className="MarkdownTextarea-action "
            onClick={[Function]}
        >
            QUOTE
        </button>
        <button
            aria-label="Add a link"
            className="MarkdownTextarea-action "
            onClick={[Function]}
        >
            URL
        </button>
        <button
            aria-label="Add a bulleted list"
            className="MarkdownTextarea-action "
            onClick={[Function]}
        >
            UL
        </button>
        <button
            aria-label="Add a numbered list"
            className="MarkdownTextarea-action "
            onClick={[Function]}
        >
            OL
        </button>
        <button
            className="MarkdownTextarea-action "
            onClick={[Function]}
        >
            &lt;/&gt;
        </button>
    </div>
    <TextareaAutosize
        className="MarkdownTextarea-write"
        inputRef={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onHeightChange={[Function]}
        style={
            Object {
                "display": "block",
              }
        }
        useCacheForDOMMeasurements={false}
        value=""
    />
</div>,
]
`;

exports[`supports preview 1`] = `
Array [
  <div
    className="MarkdownTextarea is-focused"
>
    <div
        className="MarkdownTextarea-toolbar"
    >
        <button
            className="MarkdownTextarea-action "
            onClick={[Function]}
        >
            Write
        </button>
        <button
            className="MarkdownTextarea-action is-active"
            onClick={[Function]}
        >
            Preview
        </button>
    </div>
    <TextareaAutosize
        className="MarkdownTextarea-write"
        inputRef={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onHeightChange={[Function]}
        style={
            Object {
                "display": "none",
              }
        }
        useCacheForDOMMeasurements={false}
        value="Hello _World_"
    />
    <div
        className="MarkdownTextarea-preview"
        dangerouslySetInnerHTML={
            Object {
                "__html": "<p>Hello <em>World</em></p>
            ",
              }
        }
        style={
            Object {
                "minHeight": null,
              }
        }
    />
</div>,
]
`;
